--- a/app/components/products/product-detail.html
+++ b/app/components/products/product-detail.html
@@ -1,7 +1,7 @@
 <div class="container text-center">
 	    <h1>{{detail.product.title}}</h1>
 	    <div style="margin-bottom: 20px">
-		    <img ng-src="{{detail.product.photos}}" />
+		    <img ng-src="{{detail.product.photos}}" width="600" height="400" />
 	    </div>
 	    <p><strong>Description: </strong>{{detail.product.description}}</p>
 	    <p><strong>Categories: </strong>{{detail.product.categories.join(', ').trim()}}</p>
