--- a/app/components/products/product-list-item.html
+++ b/app/components/products/product-list-item.html
@@ -1,4 +1,5 @@
 <h4>{{ product.title }}</h4>
+<img src="{{product.photos}}" width="300" height="200"/>
 <p><strong>Description:</strong> {{ product.description }}</p>
 <p><strong>Brand:</strong> {{ product.brand }}</p>
 <p><strong>Price:</strong> {{ product.price }}</p>
