--- a/app/components/products/product-list-item.html
+++ b/app/components/products/product-list-item.html
@@ -1,8 +1,8 @@
-<h4>{{ product.title }}</h4>
-<img src="{{product.photos}}" width="300" height="200"/>
+<h4><a ui-sref="productDetail({id:product.id})">{{ product.title }}</a></h4>
+<img src="{{product.photos}}" width="200" height="200"/>
 <p><strong>Description:</strong> {{ product.description }}</p>
 <p><strong>Brand:</strong> {{ product.brand }}</p>
-<p><strong>Price:</strong> {{ product.price }}</p>
+<p><strong>Price:</strong> ${{ product.price }}</p>
 <p><strong>Inventory:</strong> {{ product.inventory_qty }}</p>
 <p><strong>Categories:</strong> {{ product.categories.join(', ').trim() }}</p>
 <p><strong>Average Rating: </strong>{{product.avgRating}}</p>
