--- a/app/components/products/product-list.html
+++ b/app/components/products/product-list.html
@@ -11,6 +11,7 @@
     		ng-click="list.filter.brand = brand; list.filterProducts(list.filter)">{{brand}}
 	    </button>
 	    <br clear="all" />
+	    <br>
 
 	    <h4 style="float:left">Filter By Average Rating:</h4>
 	    <span 
@@ -23,18 +24,18 @@
 	    </span>
 
 	    <br clear="all" />
-	    <button ng-click="list.filter.brand = ''; list.filter.rating = ''; list.filterProducts(list.filter)" class="btn btn-primary">Reset Filters</button>
+	    <br>
+	    <button ng-click="list.filter.brand = ''; list.filter.rating = ''; list.filterProducts(list.filter)" class="btn btn-primary pull-right">Reset Filters</button>
+    	<br clear="all" />
     </div>
 
-	<ul class="list-group">
-		<li 
-			style="margin:5px;" 
+		<div class="thumbnail col-md-4 col-lg-3"
+			style="margin:5px; padding:10px;" 
 			ng-repeat="product in list.products" 
 			class="list-group-item"
 		>
 			<product-list-item product="product"></product-list-item>
-		</li>
-	</ul>
+		</div>
 
 	<h4 class="well" ng-show="!list.products.length">There are no products that match your filter settings.</h4>
 </div>
