--- a/app/components/products/product-list.html
+++ b/app/components/products/product-list.html
@@ -29,7 +29,7 @@
     	<br clear="all" />
     </div>
 
-		<div class="thumbnail col-md-4 col-lg-3"
+		<div class="thumbnail"
 			style="margin:5px; padding:10px;" 
 			ng-repeat="product in list.products" 
 			class="list-group-item"
