--- a/app/components/products/product-list.html
+++ b/app/components/products/product-list.html
@@ -29,8 +29,8 @@
     	<br clear="all" />
     </div>
 
-		<div class="thumbnail"
-			style="margin:5px; padding:10px;" 
+		<div class="thumbnail col-md-6 col-lg-4"
+			style="padding:10px;" 
 			ng-repeat="product in list.products" 
 			class="list-group-item"
 		>
