--- a/app/components/products/product-list-item.html
+++ b/app/components/products/product-list-item.html
@@ -1,9 +1,7 @@
 <h4><a ui-sref="productDetail({id:product.id})">{{ product.title }}</a></h4>
 <img src="{{product.photos}}" width="200" height="200"/>
-<p><strong>Description:</strong> {{ product.description }}</p>
-<p><strong>Brand:</strong> {{ product.brand }}</p>
-<p><strong>Price:</strong> ${{ product.price }}</p>
-<p><strong>Inventory:</strong> {{ product.inventory_qty }}</p>
+<h4>${{ product.price }}</h4>
+<p>by {{ product.brand }}</p>
 <p><strong>Categories:</strong> {{ product.categories.join(', ').trim() }}</p>
-<p><strong>Average Rating: </strong>{{product.avgRating}}</p>
+<p><strong>Average Rating: </strong>{{product.avgRating}}  ({{product.reviews.length}} reviews)</p>
 <p><a ui-sref="productDetail({id:product.id})">See Details</a></p>
